rename endpoints of active and live stake
